[project]
name = "best-ml-model"
version = "0.1.0"
description = "Machine learning model for predicting the best model for a given dataset."
author = "Fernando Bello (BelloDev)"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "ipykernel==7.2.0",
    "joblib==1.5.3",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
]
